--- a/Telegram/Resources/winrc/Telegram.rc
+++ b/Telegram/Resources/winrc/Telegram.rc
@@ -50,11 +50,11 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "Telegram Messenger LLP"
-            VALUE "FileDescription", "Telegram Desktop"
+            VALUE "CompanyName", "Ventures"
+            VALUE "FileDescription", "Bettergram"
             VALUE "FileVersion", "1.3.9.0"
             VALUE "LegalCopyright", "Copyright (C) 2014-2018"
-            VALUE "ProductName", "Telegram Desktop"
+            VALUE "ProductName", "Bettergram"
             VALUE "ProductVersion", "1.3.9.0"
         END
     END
