--- a/Telegram/Resources/winrc/Telegram.rc
+++ b/Telegram/Resources/winrc/Telegram.rc
@@ -50,7 +50,7 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "Ventures"
+            VALUE "CompanyName", "Bettergram LLC"
             VALUE "FileDescription", "Bettergram"
             VALUE "FileVersion", "1.3.9.0"
             VALUE "LegalCopyright", "Copyright (C) 2014-2018"
